# Master1-IIA-project

./: .gitignore  LICENSE  README.md  SYNCHRONISATION_MODIFICATIONS.md  UV.md  lcr_log.txt  main.py  monitor_serial.py  pyproject.toml  queue_manager.py  start.sh  uv.toml
arduino/Canne/: platformio.ini
arduino/Canne/include/: command_queue.h  get.h  logic.h  send.h
arduino/Canne/src/: command_queue.cpp  get.cpp  logic.cpp  main.cpp  send.cpp
arduino/src/: get.cpp
camera/: camera.py  camera_initial.py  camera_simple.py  canne_depth_mvp.py  test_fps.py
doc/: Advanced Human Machine.pptx  Makefile  README.md  adaptive-cane-report.tex  mi-report.md  mi-report.tex
doc/figures/: README.md
doc/report/: feedback_rapport.md  final-report.tex  nathan-section-report.md
doc/report/final-report/: bibliography.bib  final-report.tex  florian-section-report.md
doc/report/mi-report/: adaptive-cane-mi-report.tex
doc/report/template/: bibliography.bib
doc/template/: text.tex
micro/: micro.py
raspberry/: RASPBERRY-PI.md  fake_serial.py  intensity_calculator.py  lcr_message_generator.py  pi-realsense.md  raspberry.py  sensor_data.py  sync_buffer.py
wheels/: pyrealsense2_wrapper-0.1-py3-none-any.whl
